made the height a set height, will fix the covering the console later

--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -47,7 +47,7 @@
 }
 
 .CodeMirror{
-	height: 100% !important;
+	height: 775px !important;
 	viewportMargin: Infinity;
 	position: relative;
 }
